# Inn-client

./: CMakeLists.txt  Inn-client.sln  README.md  _auth.cpp  _auth.h  auth.cpp  auth.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc  test.h
Inn-client/: Inn-client.vcxproj  Innclient.cpp  Innclient.h  Innclient.qrc  Innclient.ui  auth.cpp  auth.h  auth.ui  chat_frame.cpp  chat_frame.h  chat_view.cpp  chat_view.h  main.cpp
cef/: _app.cpp  _app.h  app.cpp  app.h  cef_handler.cpp  cef_handler.h  cef_settings.cpp  cef_settings.h  cef_v8_handler.cpp  cef_v8_handler.h  cef_widget.cpp  cef_widget.h  dev_widget.cpp  dev_widget.h  handler.cpp  handler.h  manager.cpp  manager.h
component/: auth.cpp  auth.h  auth.ui  borderless_window.cpp  borderless_window.h  button.cpp  button.h  chat_content.cpp  chat_content.h  context_menu.cpp  context_menu.h  control_btn.cpp  control_btn.h  control_panel.cpp  control_panel.h  list.cpp  list.h  navigation.cpp  navigation.h  popup.cpp  popup.h  smooth_scroll_area.cpp  smooth_scroll_area.h  text_editor.cpp  text_editor.h  title_bar.cpp  title_bar.h  user.cpp  user.h  widget_small.cpp  widget_small.h
model/: define.h  utils.cpp  utils.h  utils.hpp
page/: chat_room.cpp  chat_room.h  overview.cpp  overview.h
service/: auth_core_service.cpp  auth_core_service.h  core_service.cpp  core_service.h  logger_service.cpp  logger_service.h  net_conn_service.cpp  net_conn_service.h  packet_parse_service.cpp  packet_parse_service.h  user_service.cpp  user_service.h
src/app/: package-lock.json  package.json  vue.config.js
src/app/src/: App.vue  main.js  router.ts
src/app/src/components/channel/: Header.vue  index.ts  index.vue
src/app/src/components/layout/: Group.vue  Room.vue  index.ts  index.vue
src/app/src/components/layout/components/Main/: Header.vue  Sider.vue  index.ts  index.vue
src/app/src/components/layout/components/Sider/: index.ts  index.vue
src/app/src/components/page/: GroupHome.vue  Home.vue  index.ts
src/app/src/components/view/: Content.vue  TextArea.vue  Title.vue
